--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ span.right_info {
   position: relative;
   padding: 20px 45px 20px;
   background-color: rgba(255,255,255,0.050980392156862744);
-  margin-bottom: -90px;
+  margin-bottom: -100px;
 }
 
 .meedy_nav_manu.style-3 {
@@ -7228,6 +7228,10 @@ to {
 @media (min-width: 992px) {
   .hero-section {
     height: 800px !important;
+  }
+  .hero-section .container {
+    position: relative;
+    top: 10px;
   }
   .hero-section .row {
     align-items: stretch !important;
